--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 <body>
 
   <header class="header">
-    <h1>Sergio Cruz</h1>
-    <h2>Application Developer</h2>
+    <h1>Chris Stielper</h1>
+    <h2>Full-Stack Developer</h2>
 
     <nav>
       <ul class="nav">
@@ -27,7 +27,7 @@
     <section class="tagline">
     <div class="content-wrapper">
       <h3>A bit more about me</h3>
-      <p>Hey I am Sergio, I work for <a target="_blank" href="https://www.codeschool.com">Code School</a> and I love writing JavaScript!</p>
+      <p>Hey I am Chris, I work for <a target="_blank" href="https://www.mm4solutions.com">Millennium Marketing Solutions</a> and I love all things web!</p>
     </div>
   </section>
 
@@ -38,10 +38,8 @@
       <p>Here are some of the technologies I enjoy writing day-to-day:</p>
       <ul>
         <li>HTML &amp; CSS</li>
-        <li>Node.js</li>
-        <li>React</li>
-        <li>Angular 2</li>
-        <li>Webpack</li>
+        <li>Javascript</li>
+        <li>PHP</li>
       </ul>
     </div>
   </section>
@@ -49,7 +47,7 @@
   <section class="contact">
     <div class="content-wrapper">
       <h3>How to contact me</h3>
-      <p>The easiest way to contact me is via twitter: <a target="_blank" href="https://twitter.com/hashtagserg">@hashtagserg</a></p>
+      <p>The easiest way to contact me is via email: <a target="_blank" href="mailto:chris@mm4solutions.com">chris@mm4solutions.com</a></p>
     </div>
   </section>
   </main>
